# flowmap-project

./: .gitignore  CLAUDE.md  README.md  implementation_plan.md  implementation_plan2.md  prompt.txt
.bkit/: agent-state.json
.claude/: settings.local.json
20260204/: FlowMap_IR_PitchDeck.md
20260204/01_input_output_v2/: index_v2.html
20260204/02_condition_v2/: index.html
20260204/03_loop_state/: index.html
20260204/실습/: blueprint_feed.html  index.html  supabase_schema.sql  supabase_schema_mvp.sql  work.html  work.html.bak  work2.html
20260204/실습/mock/: flowSteps.js  projects.js  stepPrompts.js
content-automation/: .env.example  .gitignore  main.py  pyproject.toml
content-automation/agents/: copy_agent.py  format_agent.py  image_prompt_agent.py  registry.py  research_agent.py  script_agent.py
content-automation/bot/: message_formatter.py  telegram_bot.py
content-automation/config/: settings.py
content-automation/core/: llm_client.py  models.py  orchestrator.py
content-automation/storage/: output_store.py
content-automation/web/: app.py  auth.py
content-automation/web/static/: index.html
dev/active/insta-analyzer-ui-upgrade/: context.md  plan.md  refinement_plan.md  refinement_plan_v2.md  tasks.md
docs/: .bkit-memory.json  .pdca-status.json
docs/.pdca-snapshots/: snapshot-1770718944677.json  snapshot-1773903403214.json  snapshot-1773993820326.json  snapshot-1774000106282.json  snapshot-1774002617656.json  snapshot-1774019662939.json  snapshot-1774026117875.json  snapshot-1774084600242.json
